# llamastash

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  INSTALL.md  Makefile  NOTICE  README.md  SECURITY.md  TODO.md  config.example.yaml  install.sh.sha256  rustfmt.toml
.cargo/: audit.toml
.cargo-husky/hooks/: pre-commit  pre-push
.claude-plugin/: marketplace.json
.config/: nextest.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: default.md  release.md
.github/workflows/: ci.yml  macos-build-nightly.yml  publish-aur-manual.yml  publish-cargo-manual.yml  publish-homebrew-manual.yml  regenerate-benchmark-snapshot.yml  release.yml  uat-cpu-only-nightly.yml  uat-metal-nightly.yml  uat-metal-spike.yml
.github/workflows-fallback/: macos-build-nightly.yml
assets/: demo.cast  demo.edited.cast  demo.raw.cast
benches/: proxy_overhead.rs
data/: benchmark-snapshot.json
data/overhead-band-measurements/: flowz13-arch-hip-20260519T202701Z.json
deployment/homebrew/: llamastash.rb.template  packager.py  packager_test.py
docs/: architecture.md  benchmarks.md  lemonade-setup.md  troubleshooting.md  usage.md
docs/benchmarks/: index.md  linux-nvidia-final.md  macos-m1-final-report.md  r1-amd-apu-final-report.md  results-2026-05-23.md  results-2026-05-23.preamble.md  results-2026-05-24.md  results-2026-05-24.preamble.md
docs/brainstorms/: 2026-05-18-init-wizard-requirements.md  2026-05-19-release-setup-requirements.md  2026-05-19-uat-e2e-hardware-strategy-requirements.md  2026-05-20-arch-defaults-typed-advanced-editor-requirements.md  2026-05-21-proxy-router-requirements.md  2026-05-29-windows-support-and-http-ipc-requirements.md  2026-05-31-npu-backend-via-lemonade-requirements.md  2026-06-06-config-presets-per-model.md  2026-06-09-lan-exposed-proxy-auth-requirements.md
docs/plans/: 2026-05-13-001-feat-llamatui-v1-launcher-plan.md  2026-05-16-001-feat-kdash-style-dashboard-ui-plan.md  2026-05-18-001-feat-init-wizard-doctor-pull-plan.md  2026-05-19-001-feat-interactive-init-wizard-and-cli-colors-plan.md  2026-05-19-002-feat-uat-e2e-hardware-strategy-plan.md  2026-05-19-003-feat-0.2.0-release-setup-plan.md  2026-05-20-001-feat-live-hf-snapshot-discovery-plan.md  2026-05-20-002-feat-colorful-cli-output-plan.md  2026-05-20-003-feat-arch-defaults-typed-editor-plan.md  2026-05-21-001-feat-proxy-router-plan.md  2026-05-29-001-feat-windows-support-and-http-ipc-plan.md  2026-06-05-001-feat-device-selection-plan.md  2026-06-09-001-feat-lan-exposed-proxy-auth-plan.md  2026-06-13-001-feat-auto-fit-launch-mode-and-hardware-truth-plan.md  2026-06-16-001-feat-mlx-backend-shared-discovery-plan.md  2026-06-20-001-refactor-codebase-audit-improvements-plan.md  2026-06-22-001-feat-config-presets-per-model-plan.md  2026-06-30-001-feat-default-preset-resolver-layer-plan.md  2026-07-10-001-feat-ds4-backend-plan.md  2026-07-15-001-refactor-backend-config-grouping-plan.md  2026-07-16-001-feat-server-abstraction-plan.md
docs/reviews/: review-2026-05-18-project-audit.md
docs/runbooks/: measure-vram-overhead-band.md  proxy-latency-bench.md  release-0.0.1-bootstrap.md  verify-uat-reintroduction.md
docs/spikes/: 2026-05-19-hf-hub-client-injection.md
docs/testing/: 2026-05-17-render-issues.md  2026-05-17-render-test-plan.md  2026-05-30-e2e-uat-plan.md  2026-06-01-e2e-uat-windows-run.md  2026-06-17-e2e-uat-windows-run.md  2026-07-19-e2e-uat-findings.md  2026-07-19-e2e-uat-plan.md  hardware-uat.md
scripts/: install.sh  install.test.bats  measure-overhead-band.py  measure-overhead-band.sh  regenerate-benchmark-snapshot.py
scripts/benchmark_sources/: README.md  hf_discovery.py  whichllm.py  whichllm_combined.py
scripts/tui/: README.md  cast_frames.py  demo.prog  harness.py  presets.prog  tui_drive.py
skills/llamastash/: SKILL.md
src/: banner.rs  lib.rs  main.rs  test_support.rs
src/backend/: llama_cpp.rs  mod.rs  server.rs
src/cli/: cli_args.rs  client.rs  colors.rs  config.rs  daemon.rs  doctor.rs  exit_codes.rs  favorites.rs  format.rs  init.rs  knob_flags.rs  last_params.rs  list.rs  logs.rs  mod.rs  output.rs  presets.rs  pull.rs  resolve.rs  show.rs  start.rs  status.rs  stop.rs  tail_args.rs
src/config/: loader.rs  mod.rs  presets_writer.rs  writer.rs  yaml_edit.rs
src/daemon/: actuals.rs  auth.rs  context.rs  control_plane.rs  discovery_task.rs  host_metrics.rs  launch_service.rs  lockfile.rs  mod.rs  orphans.rs  peercred.rs  ports.rs  preset_migration.rs  preset_store.rs  probe.rs  registry.rs  resources.rs  runtime_file.rs  shutdown.rs  state_store.rs  supervisor.rs
src/discovery/: catalog.rs  known_caches.rs  lemonade.rs  lm_studio.rs  metadata_cache.rs  mod.rs  ollama.rs  scanner.rs  watcher.rs
src/gguf/: errors.rs  header.rs  identity.rs  memory.rs  metadata.rs  mod.rs  test_fixtures.rs
src/gpu/: amd.rs  dxgi.rs  metal.rs  mod.rs  nvidia.rs  vulkan.rs
src/init/: benchmark.rs  config_writer.rs  detection.rs  doctor.rs  download.rs  fetch.rs  fetch_policy.rs  hf_api.rs  mod.rs  prompts.rs  recommender.rs  smoke.rs  snapshot.rs  wizard.rs
tests/: cli_config_test.rs  cli_doctor_basic.rs  cli_init_parse.rs  cli_integration_test.rs  daemon_config_integration_test.rs  daemon_lifecycle_test.rs  data_yamls_well_formed.rs  discovery_scan_test.rs  ds4_backend_test.rs  fetch_redirect_policy.rs  gguf_parse_test.rs  init_orchestration.rs  init_snapshot_persistence.rs  ipc_handshake_test.rs  known_caches_test.rs  lemonade_route_test.rs  lemonade_umbrella_test.rs  list_devices_fixture.rs  list_models_test.rs  preset_config_ipc_test.rs  preset_migration_test.rs  proxy_autostart.rs  proxy_coalesce.rs  proxy_echo_verification.rs  proxy_eviction.rs  proxy_fallback.rs  proxy_listener_test.rs  proxy_manual_test_plan.md  proxy_models.rs  proxy_ollama_compat.rs  proxy_real_client_smoke.md  proxy_routing.rs  proxy_ui.rs  recommender_corpus.rs  split_gguf_test.rs  start_model_ipc_test.rs  supervisor_ipc_test.rs  supervisor_lifecycle_test.rs  tui_ascii_render_test.rs  tui_chat_smoke_test.rs  (+3 more)
(+146 files in other folders)
