[package]
name = "llamadash"
version = "0.2.0-dev"
authors = ["Deepu K Sasidharan <d4udts@gmail.com>"]
description = "A fast, keyboard-driven TUI for launching local llama.cpp models"
documentation = "https://github.com/llamadash/llamadash"
keywords = ["llamadash", "llama-cpp", "llm", "tui", "gguf"]
repository = "https://github.com/llamadash/llamadash"
homepage = "https://github.com/llamadash/llamadash"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.80"
# `cargo run` (without --bin) targets the real binary. The other
# `[[bin]]` entry (fake_llama_server) is only built for tests
# under the `test-fixtures` feature, but cargo's run-target picker
# checks the manifest before feature resolution, so we still need
# this hint.
default-run = "llamadash"
exclude = [
  "test_data/*",
  "deployment/*",
  "artwork/*",
  ".github",
  "CONTRIBUTING.md",
  "*.log",
  "tags",
]

[dependencies]
anyhow = "1.0"
# `wayland-data-control` activates arboard's native Wayland backend
# alongside the default X11/XWayland one. Both ship together so a
# single binary works across compositors without recompilation.
arboard = { version = "3", default-features = false, features = [
  "wayland-data-control",
] }
blake3 = { version = "1", default-features = false, features = ["std"] }
# v2 benchmark snapshot's `min_version` field gates rollback-DoS attacks
# (see Unit 1 spike). Minimal feature set keeps semver compact.
semver = { version = "1", default-features = false, features = ["std"] }
clap = { version = "4.6", default-features = false, features = [
  "help",
  "usage",
  "error-context",
  "derive",
  "env",
  "std",
] }
crossterm = "0.29"
directories = "6"
# Streaming bytes for the right-pane chat tab (Unit 7) without
# pulling in tokio-stream's full surface.
futures = { version = "0.3", default-features = false, features = ["std"] }
ignore = "0.4"
libc = "0.2"
log = "0.4"
notify-debouncer-mini = { version = "0.7", default-features = false }
ratatui = { version = "0.30", default-features = false, features = [
  "crossterm",
] }
regex = { version = "1.11", default-features = false, features = [
  "std",
  "perf",
  "unicode-perl",
] }
# Pinned to 0.12 as reqwest 0.13 has issues with Send
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
# v2 HuggingFace pull (Unit 9). 0.5.0 is the latest stable line and
# transitively resolves the same reqwest 0.12 we pin above. Default
# features include `native-tls` + `ureq`; we want only the async
# `tokio` path on `rustls-tls`.
hf-hub = { version = "0.5", default-features = false, features = [
  "tokio",
  "rustls-tls",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
simplelog = { version = "0.12", default-features = false }
strum = { version = "0.28", features = ["derive"] }
# v2 init wizard (Unit 10) + 2026-05-19 interactive wizard work.
# `cliclack` replaces the unused `dialoguer` dep with a Clack-style
# stepped wizard built on `console`. Pinned by minor version so
# patches land without a deliberate PR but minor bumps don't.
cliclack = "0.3"
# Terminal styling primitives for the CLI color policy. Powers
# `cli::colors` and the prompts wrapper. Declared explicitly so the
# color/prompt modules own their dep rather than relying on the
# `cliclack`/`indicatif` transitive chain.
console = "0.15"
# Display-width measurement for terminal text (CJK paths, emoji, etc.).
# ratatui already pulls this in transitively; declaring it explicitly so
# the daemon-info pane's truncation logic can reason in cells, not chars.
unicode-width = "0.2"
sysinfo = { version = "0.39", default-features = false, features = [
  "system",
  "component",
] }
tokio = { version = "1.50", default-features = false, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
which = "8"
# Hand-rolled error enums migrated to `thiserror` derives during the
# Tier-D audit pass (audit §3 #4).
thiserror = "2"
# `fd-lock` replaces the hand-rolled PID lockfile (audit §2.1 #1).
# Same crate Cargo uses for its own lockfile.
fd-lock = "4"
# `tempfile` replaces the hand-rolled atomic state-write path
# (audit §2.1 #2). Already transitive via dev-deps; pulled to
# the top level so production code can call `persist` directly.
tempfile = "3"
# tar + flate2 power the v2 install path's archive extraction
# (Unit 8). The llama.cpp GitHub Releases assets we route to on
# Linux + macOS ship as `.tar.gz`; Windows `.zip` is out of v2
# scope (post-v2 follow-up per plan Scope Boundaries).
tar = "0.4"
flate2 = { version = "1", default-features = false, features = [
  "rust_backend",
] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
# Audit §2.1 #3 flagged grandchild SIGTERM leaks. The fix is a
# single character — `libc::kill(-pid, sig)` instead of
# `libc::kill(pid, sig)` — because `pre_exec` already ran
# `setsid()`, so the child's PGID equals its PID and the
# negative form signals the whole process group. Pulling in
# the `command-group` crate would boil down to the same syscall
# on Unix and is not needed.

[lib]
name = "llamadash"
path = "src/lib.rs"

[[bin]]
name = "llamadash"
path = "src/main.rs"
bench = false

# Test-only fake `llama-server` exposed under a feature flag so it
# never ships in `cargo install`-built artefacts. Integration tests
# spawn this via `CARGO_BIN_EXE_fake_llama_server`.
[[bin]]
name = "fake_llama_server"
path = "tests/fixtures/fake_llama_server.rs"
required-features = ["test-fixtures"]
bench = false
test = false
doc = false

[features]
test-fixtures = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
