[package]
name = "llamastash"
version = "0.0.1"
authors = ["Deepu K Sasidharan <d4udts@gmail.com>"]
description = "A fast, keyboard-driven TUI for running local models via llama.cpp"
documentation = "https://github.com/llamastash/llamastash"
categories = ["command-line-utilities"]
keywords = ["llama-cpp", "llm", "tui", "gguf", "openai"]
repository = "https://github.com/llamastash/llamastash"
homepage = "https://github.com/llamastash/llamastash"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.95"
# `cargo run` (without --bin) targets the real binary. The other
# `[[bin]]` entry (fake_llama_server) is only built for tests
# under the `test-fixtures` feature, but cargo's run-target picker
# checks the manifest before feature resolution, so we still need
# this hint.
default-run = "llamastash"
exclude = [
  # Development / packaging scaffolding — never needed by `cargo install`
  # users. The published crate must fit under crates.io's 10 MiB hard
  # limit; without these excludes the package compresses to ~16 MiB,
  # mostly from `assets/`'s marketing GIFs/screenshots.
  "test_data/*",
  "deployment/*",
  "artwork/*",
  ".github",
  ".cargo-husky/*",
  ".claude-plugin/*",
  "skills/*",
  "scripts/*",
  # Marketing media. README references are rewritten to absolute
  # https://raw.githubusercontent.com/llamastash/llamastash/main/assets/
  # URLs so the README still renders on crates.io.
  "assets/*",
  # Maintainer-internal docs subtrees. The single-file docs at
  # docs/{architecture,benchmarks,troubleshooting,usage}.md are kept
  # since they're linked from the README and useful to users browsing
  # the crate.
  "docs/brainstorms/*",
  "docs/plans/*",
  "docs/reviews/*",
  "docs/spikes/*",
  "docs/runbooks/*",
  "docs/testing/*",
  "docs/benchmarks/*",
  # Integration tests and benches are not used by binary consumers;
  # `data/benchmark-snapshot.json` is kept because it's `include_str!`'d
  # into the binary at compile time.
  "tests/*",
  "benches/*",
  # Repo-only files.
  "AGENTS.md",
  "CONTRIBUTING.md",
  "Makefile",
  "TODO.md",
  "*.log",
  "tags",
]

[dependencies]
anyhow = "1.0"
# `wayland-data-control` activates arboard's native Wayland backend
# alongside the default X11/XWayland one. Both ship together so a
# single binary works across compositors without recompilation.
arboard = { version = "3", default-features = false, features = [
  "wayland-data-control",
] }
# Bearer-token control-plane auth (Unit 1 of Windows+HTTP-IPC plan).
# `base64::engine::general_purpose::URL_SAFE_NO_PAD` is the wire
# format for the token bytes; the dep is already in tree transitively
# via reqwest/hyper-util — declared explicitly so the daemon's auth
# module owns its surface.
base64 = { version = "0.22", default-features = false, features = ["std"] }
blake3 = { version = "1", default-features = false, features = ["std"] }
# v2 benchmark snapshot's `min_version` field gates rollback-DoS attacks
# (see Unit 1 spike). Minimal feature set keeps semver compact.
semver = { version = "1", default-features = false, features = ["std"] }
clap = { version = "4.6", default-features = false, features = [
  "help",
  "usage",
  "error-context",
  "derive",
  "env",
  "std",
] }
crossterm = "0.29"
directories = "6"
# Streaming bytes for the right-pane chat tab (Unit 7) without
# pulling in tokio-stream's full surface.
futures = { version = "0.3", default-features = false, features = ["std"] }
ignore = "0.4"
libc = "0.2"
log = "0.4"
notify-debouncer-mini = { version = "0.7", default-features = false }
# OS-randomness source for the per-daemon bearer token. Already in
# tree transitively via hf-hub; pulled to top-level so the auth
# module owns its dep. We only use `rand::rngs::OsRng` + `fill_bytes`
# — no PRNG state, no thread-local RNG.
rand = { version = "0.9", default-features = false, features = [
  "std",
  "os_rng",
] }
ratatui = { version = "0.30", default-features = false, features = [
  "crossterm",
] }
regex = { version = "1.11", default-features = false, features = [
  "std",
  "perf",
  "unicode-perl",
] }
# Pinned to 0.12 as reqwest 0.13 has issues with Send
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
# v2 HuggingFace pull (Unit 9). 0.5.0 is the latest stable line and
# transitively resolves the same reqwest 0.12 we pin above. Default
# features include `native-tls` + `ureq`; we want only the async
# `tokio` path on `rustls-tls`.
hf-hub = { version = "0.5", default-features = false, features = [
  "tokio",
  "rustls-tls",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
simplelog = { version = "0.12", default-features = false }
strum = { version = "0.28", features = ["derive"] }
# v2 init wizard (Unit 10) + 2026-05-19 interactive wizard work.
# `cliclack` replaces the unused `dialoguer` dep with a Clack-style
# stepped wizard built on `console`. Pinned by minor version so
# patches land without a deliberate PR but minor bumps don't.
cliclack = "0.5"
# Terminal styling primitives for the CLI color policy. Powers
# `cli::colors` and the prompts wrapper. Declared explicitly so the
# color/prompt modules own their dep rather than relying on the
# `cliclack`/`indicatif` transitive chain.
console = "0.16"
# Display-width measurement for terminal text (CJK paths, emoji, etc.).
# ratatui already pulls this in transitively; declaring it explicitly so
# the daemon-info pane's truncation logic can reason in cells, not chars.
unicode-width = "0.2"
sysinfo = { version = "0.39", default-features = false, features = [
  "system",
  "component",
  "disk",
] }
tokio = { version = "1.50", default-features = false, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
which = "8"
# Hand-rolled error enums migrated to `thiserror` derives during the
# Tier-D audit pass (audit §3 #4).
thiserror = "2"
# `tempfile` replaces the hand-rolled atomic state-write path
# (audit §2.1 #2). Already transitive via dev-deps; pulled to
# the top level so production code can call `persist` directly.
tempfile = "3"
# tar + flate2 power the v2 install path's archive extraction
# (Unit 8). The llama.cpp GitHub Releases assets we route to on
# Linux + macOS ship as `.tar.gz`; Windows `.zip` is out of v2
# scope (post-v2 follow-up per plan Scope Boundaries).
tar = "0.4"
flate2 = { version = "1", default-features = false, features = [
  "rust_backend",
] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
# Audit §2.1 #3 flagged grandchild SIGTERM leaks. The fix is a
# single character — `libc::kill(-pid, sig)` instead of
# `libc::kill(pid, sig)` — because `pre_exec` already ran
# `setsid()`, so the child's PGID equals its PID and the
# negative form signals the whole process group. Pulling in
# the `command-group` crate would boil down to the same syscall
# on Unix and is not needed.

# OpenAI-compat proxy router (post-v2 feat). Hyper 1.x is the
# lightest tokio-compatible HTTP server option and already lives in
# the dep tree transitively via reqwest. Loopback HTTP/1.1 only —
# HTTP/2 is intentionally not enabled to keep the ALPN/TLS surface
# out of the build. See docs/plans/2026-05-21-001-feat-proxy-router-plan.md
# Key Technical Decisions for the axum-vs-hyper analysis.
hyper = { version = "1", default-features = false, features = [
  "http1",
  "server",
] }
# `server-auto` would re-enable hyper's HTTP/2 feature transitively;
# we use `hyper::server::conn::http1::Builder` directly instead so
# the build stays HTTP/1.1-only. The `tokio` feature ships the
# `TokioIo` adapter that bridges hyper's `Io` traits onto
# `tokio::net::TcpStream`.
hyper-util = { version = "0.1", default-features = false, features = [
  "tokio",
] }
http-body-util = "0.1"

# Windows-only Win32 surface for the Unit 6 process-supervision backend
# (`src/util/process_control.rs`): Job Objects for kill-on-job-close
# semantics, GenerateConsoleCtrlEvent for CTRL+BREAK delivery, and
# OpenProcess / GetExitCodeProcess for liveness probing. Pulled in only
# on `cfg(windows)` so Linux/macOS binaries don't grow.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_System_Console",
] }

[lib]
name = "llamastash"
path = "src/lib.rs"

[[bin]]
name = "llamastash"
path = "src/main.rs"
bench = false

# Test-only fake `llama-server` exposed under a feature flag so it
# never ships in `cargo install`-built artefacts. Integration tests
# spawn this via `CARGO_BIN_EXE_fake_llama_server`.
[[bin]]
name = "fake_llama_server"
path = "tests/fixtures/fake_llama_server.rs"
required-features = ["test-fixtures"]
bench = false
test = false
doc = false

# Local-only git hooks installed at first `cargo test` (or any
# build that resolves dev-dependencies). The hook bodies live in
# `.cargo-husky/hooks/`; pre-commit reformats + lints and pre-push
# additionally runs the full test suite so wedged commits never
# leave the laptop. `user-hooks` makes cargo-husky install our
# scripts verbatim instead of its built-in defaults.
[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

# Criterion drives the proxy-overhead bench landed by Unit 7 of the
# proxy-router plan. Default features pull in `rayon` + `plotters`
# (the SVG plot backend) which would more than double the dev-dep
# tree; `html_reports` is sufficient to produce the maintainer-
# readable summary the runbook expects. The bench itself is feature-
# gated under `test-fixtures` so plain `cargo build --benches`
# without that feature is a no-op for downstream packagers.
[dev-dependencies.criterion]
version = "0.5"
default-features = false
features = ["html_reports"]

# Bench harness for R160 latency validation. `harness = false` is
# criterion's idiom: we hand-roll `main` in the bench file so
# criterion's macros own the driver rather than libtest. See
# `docs/runbooks/proxy-latency-bench.md` for the reproducible run
# procedure.
[[bench]]
name = "proxy_overhead"
harness = false
required-features = ["test-fixtures"]

[features]
test-fixtures = []
# Maintainer-only "user acceptance test" subcommand. Gates the
# `llamastash uat` entry point and the orchestrator that drives a real
# GPU-backend lifecycle on local hardware (Unit 4). Never enabled on
# shipped binaries — crates.io and Homebrew bottles build without the
# feature so the subcommand is unreachable from a user install. The
# release workflow audits its build invocation to confirm `--features
# uat` is not passed.
uat = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
